Remove unnecessary charset methods