@@ -3,7 +3,6 @@ package org.geogebra.common.jre.util;
 import java.io.UnsupportedEncodingException;
 
 import org.geogebra.common.factories.UtilFactory;
-import org.geogebra.common.util.Charsets;
 import org.geogebra.common.util.Reflection;
 import org.geogebra.common.util.URLEncoder;
 import org.geogebra.regexp.server.JavaRegExpFactory;
@@ -28,7 +27,7 @@ public abstract class UtilFactoryJre extends UtilFactory  {
 	public URLEncoder newURLEncoder() {
 		return urlComponent -> {
 			try {
-				return java.net.URLEncoder.encode(urlComponent, Charsets.UTF_8);
+				return java.net.URLEncoder.encode(urlComponent, "UTF-8");
 			} catch (UnsupportedEncodingException e) {
 				// cannot happen, UTF-8 supported everywhere
 			}
